# DoorServices

./: .gitignore  CMakeLists.txt  DoorServices.code-workspace  README.md
main/: CMakeLists.txt  DoorServices_main.c
main/app/: app_events.h  app_fsm.c  app_fsm.h  timers.c  timers.h
main/drivers/fingerprint/: fingerprint.c  fingerprint.h
main/drivers/i2cdev/: i2cdev.c  i2cdev.h  i2cdev_legacy.c
main/drivers/led/: led.c  led.h
main/drivers/padSensor/: padSens.c  padSens.h
main/drivers/screen/: ssd1306.c  ssd1306.h
main/drivers/ssd1306/: ssd1306.c  ssd1306.h
main/drivers/temperature/: CMakeLists.txt  temp_sensor.c  temp_sensor.h  temperature.c  temperature.h
main/drivers/temperature/bmp280/: bmp280.c  bmp280.h
main/drivers/temperature/i2cdev/: i2cdev.c  i2cdev.h
main/services/: sleep_manager.c  sleep_manager.h
main/tasks/: app_task.c  app_task.h  btn_task.c  btn_task.h  fp_task.c  fp_task.h  led_task.c  led_task.h  pad_task.c  pad_task.h  relay_task.c  relay_task.h  screen_task.c  screen_task.h  sleep_task.c  sleep_task.h  temp_task.c  temp_task.h
